Users can update their accounts.  Passwords are now hashed, and a logger has been added but not fully implemented.

--- a/src/main/webapp/html/account.html
+++ b/src/main/webapp/html/account.html
@@ -5,19 +5,19 @@
 			<div class="input-group-prepend">
 				<span class="input-group-text">First Name</span>
 			</div>
-			<input class="form-control" type="text" ng-model="first_name" value="{{user.first_name}}">
+			<input class="form-control" type="text" ng-model="user.firstName">
 		</div>
 		<div class="input-group my-3">
 			<div class="input-group-prepend">
 				<span class="input-group-text">Last Name</span>
 			</div>
-			<input class="form-control" type="text" ng-model="last_name" value="{{user.last_name}}">
+			<input class="form-control" type="text" ng-model="user.lastName">
 		</div>
 		<div class="input-group my-3">
 			<div class="input-group-prepend">
 				<span class="input-group-text">User Name</span>
 			</div>
-			<input class="form-control" type="text" ng-model="user_name" value="{{user.user_name}}">
+			<input class="form-control" type="text" ng-model="user.userName">
 		</div>
 		<div class="input-group my-3">
 			<div class="input-group-prepend">
@@ -32,6 +32,6 @@
 			<input class="form-control" type="password" ng-model="password2">
 		</div>
 		
-			<button class="btn" ng-click="submitAccChange()">Submit</button>
+			<button class="btn" ng-click="updateUser()">Submit</button>
 	</form>
 </div>
