--- a/src/main/webapp/html/manage.html
+++ b/src/main/webapp/html/manage.html
@@ -1,71 +1,32 @@
-<p>Welcome to the Manager Dashboard page!</p>
 
 <div class='jumbotron'>
-<h1 class='display-4'>Pending Requests</h1>
-<table class="table">
+<h1 class='display-4'>All Requests</h1>
+<table class="table table-hover">
 	<thead>
 		<tr>
-			<th>Amount</th>
-			<th>Reason</th>
-			<th>Date Submitted</th>
-			
-		</tr>
-	</thead>
-	<tbody>
-		<tr ng-repeat="req in pRequests">
-			<td>{{req.amount | currency}}</td>
-			<td>{{req.reason}}</td>
-			<td>{{req.dateSub}}</td>
-			<td><button class="btn btn-success" ng-click="approve(req.id)">Approve</button></td>
-			<td><button class="btn btn-danger" ng-click="deny(req.id)">Deny</button></td>
-		</tr>
-	</tbody>
-</table>
-</div>
-
-<div class='jumbotron'>
-<h1 class='display-4'>Approved Requests</h1>
-<table class="table">
-	<thead>
-		<tr>
+			<th>Submitter</th>
 			<th>Amount</th>
 			<th>Status</th>
 			<th>Reason</th>
 			<th>Date Submitted</th>
 			<th>Date Resolved</th>
+			<th>Resolver</th>
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-repeat="req in aRequests">
+		<tr ng-repeat="req in requests">
+			<td>{{req.subName}}</td>
 			<td>{{req.amount | currency}}</td>
 			<td>{{req.status}}</td>
 			<td>{{req.reason}}</td>
 			<td>{{req.dateSub}}</td>
-			<td>{{req.dateRes}}</td>
-		</tr>
-	</tbody>
-</table>
-</div>
-
-<div class='jumbotron'>
-<h1 class='display-4'>Rejected Requests</h1>
-<table class="table">
-	<thead>
-		<tr>
-			<th>Amount</th>
-			<th>Status</th>
-			<th>Reason</th>
-			<th>Date Submitted</th>
-			<th>Date Resolved</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr ng-repeat="req in rRequests">
-			<td>{{req.amount | currency}}</td>
-			<td>{{req.status}}</td>
-			<td>{{req.reason}}</td>
-			<td>{{req.dateSub}}</td>
-			<td>{{req.dateRes}}</td>
+			<td>{{req.dateRes}}
+				<div class="row" ng-if="req.dateRes == ''">
+					<button class="btn btn-success col-sm" ng-click="approve(req.id)">Approve</button>
+					<button class="btn btn-danger col-sm" ng-click="deny(req.id)">Deny</button>
+				</div>
+			</td>
+			<td>{{req.resName}}</td>
 		</tr>
 	</tbody>
 </table>
