--- a/src/main/webapp/html/request.html
+++ b/src/main/webapp/html/request.html
@@ -3,7 +3,7 @@
 
 <div class='jumbotron'>
 <h1 class='display-4'>My Requests</h1>
-<table class="table">
+<table class="table table-hover">
 	<thead>
 		<tr>
 			<th>Amount</th>
@@ -11,6 +11,7 @@
 			<th>Reason</th>
 			<th>Date Submitted</th>
 			<th>Date Resolved</th>
+			<th>Resolver</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -20,6 +21,7 @@
 			<td>{{req.reason}}</td>
 			<td>{{req.dateSub}}</td>
 			<td>{{req.dateRes}}</td>
+			<td>{{req.resName}}</td>
 		</tr>
 	</tbody>
 </table>
