--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,7 +17,7 @@
        			aria-controls='navbarTogglerDemo03' aria-expanded='false' aria-label='Toggle navigation' ng-if="type != 'login'">
               <span class='navbar-toggler-icon'></span>
             </button>
-            <a class='navbar-brand' href='#!/{{type}}'>BitMiner Corp. ERS App</a>
+            <a class='navbar-brand {{navItems[0]}}' href='#!/{{type}}'>BitMiner Corp. ERS App</a>
           
             <div class='collapse navbar-collapse' id='navbarToggler' ng-if="type != 'login'">
               <ul class='navbar-nav mr-auto mt-2 mt-lg-0'>
@@ -36,7 +36,7 @@
               </ul>
             </div>
 		</nav>
-    <div ng-view class='container'>
+    <div ng-view class='container-fluid'>
     </div>
     <p>{{error}}</p>
     <p ng-bind-html="error_message"></p>
