--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,6 +36,8 @@
               </ul>
             </div>
 		</nav>
+	    
+	    <p>Hello World</p>
     <div ng-view class='container-fluid'>
     </div>
     <p>{{error}}</p>
