--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,6 +38,7 @@
 		</nav>
 	    
 	    <p>Hello World</p>
+	    <p>How are you?</p>
     <div ng-view class='container-fluid'>
     </div>
     <p>{{error}}</p>
