--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -39,6 +39,7 @@
 	    
 	    <p>Hello World</p>
 	    <p>How are you?</p>
+	    <p>Test 3</p>
     <div ng-view class='container-fluid'>
     </div>
     <p>{{error}}</p>
