--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -40,6 +40,7 @@
 	    <p>Hello World</p>
 	    <p>How are you?</p>
 	    <p>Test 3</p>
+	    <p>Hey look another change</p>
     <div ng-view class='container-fluid'>
     </div>
     <p>{{error}}</p>
