--- a/src/main/webapp/html/managerDashBoard.html
+++ b/src/main/webapp/html/managerDashBoard.html
@@ -1,30 +1,25 @@
 <h1>Welcome to the Manager DashBoard!</h1>
 
+<div class="alert alert-warning alert-dissmissible" role="alert">
+  	Hello {{userInfo.firstName}} {{userInfo.lastName}}!  You have some requests waiting!
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 <div class='jumbotron'>
-<h1 class='display-4'>Pending Requests</h1>
-<table class="table table-hover">
-	<thead>
-		<tr>
-			<th>Submitter</th>
-			<th>Amount</th>
-			<th>Reason</th>
-			<th>Date Submitted</th>
-			<th>Action</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr ng-repeat="req in requests">
-			<td>{{req.subName}}</td>
-			<td>{{req.amount | currency}}</td>
-			<td>{{req.reason}}</td>
-			<td>{{req.dateSub}}</td>
-			<td>
-				<div class="row">
-					<button class="btn btn-success col-sm" ng-click="approve(req.id)">Approve</button>
-					<button class="btn btn-danger col-sm" ng-click="deny(req.id)">Deny</button>
-				</div>
-			</td>
-		</tr>
-	</tbody>
-</table>
+<h1 class='display-4'>Status of All Requests</h1>
+<svg height=400 width=400 viewBox="-1 -1 2 2">
+	<path ng-attr-d="{{piechartData.Approved}}" fill=green />
+	<path ng-attr-d="{{piechartData.Rejected}}" fill=red />
+	<path ng-attr-d="{{piechartData.Pending}}" fill=yellow />
+</svg>
+<svg height=400 width=200>
+	<rect width=200 height=200 rx=15 fill=lightblue />
+	<circle cx=50 cy=50 r=10 fill=green />
+	<text x=70 y=50>Approved</text>
+	<circle cx=50 cy=100 r=10 fill=red />
+	<text x=70 y=100>Rejected</text>
+	<circle cx=50 cy=150 r=10 fill=yellow />
+	<text x=70 y=150>Pending</text>
+</svg>
 </div>
